--- a/pages/product.html
+++ b/pages/product.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../assets/css/global.css">
     <link rel="stylesheet" href="../assets/css/header/header.css">
     <link rel="stylesheet" href="../assets/css/header/search-input.css">
+    <link rel="stylesheet" href="../assets/css/header/button-login.css">
     <link rel="stylesheet" href="../assets/css/footer.css">
     <link rel="stylesheet" href="../assets/css/products/products-card.css">
     <link rel="stylesheet" href="../assets/css/products/products.css">
@@ -18,8 +19,11 @@
 <body>
     <header class="header">
         <img src="../assets/images/Logo.svg" alt="logo da alura geek"></img>
-        <input class="search" type="text">
-        <i class="uil uil-search-alt"></i>
+        <div class="header__search">
+            <input class="search" type="text" placeholder="O que deseja encontrar?">
+            <i class="uil uil-search-alt"></i>
+        </div>
+        <button class="button-login">Login</button>
     </header>
     <main class="container">
         <img class="product__image" src="../assets/images/img3.jpg" alt="Produto XYZ">
@@ -70,12 +74,14 @@
     <footer class="footer">
         <div class="footer__aboutUs">
             <img class="footer__logo" src="../assets/images/Logo.svg" alt="logo">
-            <p>Quem somos nós</p>
-            <p>Política de privacidade</p>
-            <p>Programa fidelidade</p>
-            <p>Nossas lojas</p>
-            <p>Quero ser franqueado</p>
-            <p>Anuncie aqui</p>
+            <div>
+                <p>Quem somos nós</p>
+                <p>Política de privacidade</p>
+                <p>Programa fidelidade</p>
+                <p>Nossas lojas</p>
+                <p>Quero ser franqueado</p>
+                <p>Anuncie aqui</p>
+            </div>
         </div>
         <!-- contact form -->
         <div class="footer__contact">
@@ -89,9 +95,9 @@
                     <label for="mensagem">Escreva sua mensagem</label>
                     <textarea name="" id="mensagem" cols="60" rows="10"></textarea>
                 </div>
-                
-                <button  type="submit">Enviar mensagem</button>
+                <button class="contact__button"  type="submit">Enviar mensagem</button>
             </form>
+        </div>
         <section class="footer__developer">
             <p>Desenvolvido por Gabriel Baldez</p>
             <p>2022</p>
