--- a/pages/login.html
+++ b/pages/login.html
@@ -8,15 +8,19 @@
     <link rel="stylesheet" href="../assets/css/global.css">
     <link rel="stylesheet" href="../assets/css/header/header.css">
     <link rel="stylesheet" href="../assets/css/header/search-input.css">
+    <link rel="stylesheet" href="../assets/css/header/button-login.css">
     <link rel="stylesheet" href="../assets/css/footer.css">
     <link rel="stylesheet" href="../assets/css/loginSession/loginSession.css">
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
     <title>Login</title>
 </head>
 <body>
     <header class="header">
         <img src="../assets/images/Logo.svg" alt="logo da alura geek"></img>
-        <input class="search" type="text">
-        <i class="uil uil-search-alt"></i>
+        <div class="header__search">
+            <input class="search" type="text" placeholder="O que deseja encontrar?">
+            <i class="uil uil-search-alt"></i>
+        </div>
     </header>
     <main class="container">
         <h1 class="container__title">Iniciar Sessão</h1>
@@ -29,12 +33,14 @@
     <footer class="footer">
         <div class="footer__aboutUs">
             <img class="footer__logo" src="../assets/images/Logo.svg" alt="logo">
-            <p>Quem somos nós</p>
-            <p>Política de privacidade</p>
-            <p>Programa fidelidade</p>
-            <p>Nossas lojas</p>
-            <p>Quero ser franqueado</p>
-            <p>Anuncie aqui</p>
+            <div>
+                <p>Quem somos nós</p>
+                <p>Política de privacidade</p>
+                <p>Programa fidelidade</p>
+                <p>Nossas lojas</p>
+                <p>Quero ser franqueado</p>
+                <p>Anuncie aqui</p>
+            </div>
         </div>
         <!-- contact form -->
         <div class="footer__contact">
@@ -48,9 +54,9 @@
                     <label for="mensagem">Escreva sua mensagem</label>
                     <textarea name="" id="mensagem" cols="60" rows="10"></textarea>
                 </div>
-                
-                <button type="submit">Enviar mensagem</button>
+                <button class="contact__button"  type="submit">Enviar mensagem</button>
             </form>
+        </div>
         <section class="footer__developer">
             <p>Desenvolvido por Gabriel Baldez</p>
             <p>2022</p>
