--- a/index.html
+++ b/index.html
@@ -56,35 +56,35 @@
             </article>
 
             <article class="product__card">
-                <img clas="card__img" src="assets/images/img1.jpg" alt="caneca star wars">
+                <img clas="card__img" src="assets/images/img2.jpg" alt="caneca star wars">
                 <h3 class="card__title">Nome do produto</h3>
                 <p class="card__price">R$ 60,00</p>
                 <a href="#" class="card__button">Ver produto</a>
             </article>
 
             <article class="product__card">
-                <img clas="card__img" src="assets/images/img1.jpg" alt="caneca star wars">
+                <img clas="card__img" src="assets/images/img3.jpg" alt="caneca star wars">
                 <h3 class="card__title">Nome do produto</h3>
                 <p class="card__price">R$ 60,00</p>
                 <a href="#" class="card__button">Ver produto</a>
             </article>
 
             <article class="product__card">
-                <img clas="card__img" src="assets/images/img1.jpg" alt="caneca star wars">
+                <img clas="card__img" src="assets/images/img4.jpg" alt="caneca star wars">
                 <h3 class="card__title">Nome do produto</h3>
                 <p class="card__price">R$ 60,00</p>
                 <a href="#" class="card__button">Ver produto</a>
             </article>
 
             <article class="product__card">
-                <img clas="card__img" src="assets/images/img1.jpg" alt="caneca star wars">
+                <img clas="card__img" src="assets/images/img5.jpg" alt="caneca star wars">
                 <h3 class="card__title">Nome do produto</h3>
                 <p class="card__price">R$ 60,00</p>
                 <a href="#" class="card__button">Ver produto</a>
             </article>
 
             <article class="product__card">
-                <img clas="card__img" src="assets/images/img1.jpg" alt="caneca star wars">
+                <img clas="card__img" src="assets/images/img6.jpg" alt="caneca star wars">
                 <h3 class="card__title">Nome do produto</h3>
                 <p class="card__price">R$ 60,00</p>
                 <a href="#" class="card__button">Ver produto</a>
@@ -98,42 +98,42 @@
         </div>
         <section class="products__cards">
             <article class="product__card">
-                <img clas="card__img" src="assets/images/img1.jpg" alt="caneca star wars">
+                <img clas="card__img" src="assets/images/img7.jpg" alt="caneca star wars">
                 <h3 class="card__title">Nome do produto</h3>
                 <p class="card__price">R$ 60,00</p>
                 <a href="#" class="card__button">Ver produto</a>
             </article>
 
             <article class="product__card">
-                <img clas="card__img" src="assets/images/img1.jpg" alt="caneca star wars">
+                <img clas="card__img" src="assets/images/img8.jpg" alt="caneca star wars">
                 <h3 class="card__title">Nome do produto</h3>
                 <p class="card__price">R$ 60,00</p>
                 <a href="#" class="card__button">Ver produto</a>
             </article>
 
             <article class="product__card">
-                <img clas="card__img" src="assets/images/img1.jpg" alt="caneca star wars">
+                <img clas="card__img" src="assets/images/img9.jpg" alt="caneca star wars">
                 <h3 class="card__title">Nome do produto</h3>
                 <p class="card__price">R$ 60,00</p>
                 <a href="#" class="card__button">Ver produto</a>
             </article>
 
             <article class="product__card">
-                <img clas="card__img" src="assets/images/img1.jpg" alt="caneca star wars">
+                <img clas="card__img" src="assets/images/img10.jpg" alt="caneca star wars">
                 <h3 class="card__title">Nome do produto</h3>
                 <p class="card__price">R$ 60,00</p>
                 <a href="#" class="card__button">Ver produto</a>
             </article>
 
             <article class="product__card">
-                <img clas="card__img" src="assets/images/img1.jpg" alt="caneca star wars">
+                <img clas="card__img" src="assets/images/img11.jpg" alt="caneca star wars">
                 <h3 class="card__title">Nome do produto</h3>
                 <p class="card__price">R$ 60,00</p>
                 <a href="#" class="card__button">Ver produto</a>
             </article>
 
             <article class="product__card">
-                <img clas="card__img" src="assets/images/img1.jpg" alt="caneca star wars">
+                <img clas="card__img" src="assets/images/img12.jpg" alt="caneca star wars">
                 <h3 class="card__title">Nome do produto</h3>
                 <p class="card__price">R$ 60,00</p>
                 <a href="#" class="card__button">Ver produto</a>
@@ -148,42 +148,42 @@
         </div>
         <section class="products__cards">
             <article class="product__card">
-                <img clas="card__img" src="assets/images/img1.jpg" alt="caneca star wars">
+                <img clas="card__img" src="assets/images/img13.jpg" alt="caneca star wars">
                 <h3 class="card__title">Nome do produto</h3>
                 <p class="card__price">R$ 60,00</p>
                 <a href="#" class="card__button">Ver produto</a>
             </article>
 
             <article class="product__card">
-                <img clas="card__img" src="assets/images/img1.jpg" alt="caneca star wars">
+                <img clas="card__img" src="assets/images/img14.jpg" alt="caneca star wars">
                 <h3 class="card__title">Nome do produto</h3>
                 <p class="card__price">R$ 60,00</p>
                 <a href="#" class="card__button">Ver produto</a>
             </article>
 
             <article class="product__card">
-                <img clas="card__img" src="assets/images/img1.jpg" alt="caneca star wars">
+                <img clas="card__img" src="assets/images/img15.jpg" alt="caneca star wars">
                 <h3 class="card__title">Nome do produto</h3>
                 <p class="card__price">R$ 60,00</p>
                 <a href="#" class="card__button">Ver produto</a>
             </article>
 
             <article class="product__card">
-                <img clas="card__img" src="assets/images/img1.jpg" alt="caneca star wars">
+                <img clas="card__img" src="assets/images/img16.jpg" alt="caneca star wars">
                 <h3 class="card__title">Nome do produto</h3>
                 <p class="card__price">R$ 60,00</p>
                 <a href="#" class="card__button">Ver produto</a>
             </article>
 
             <article class="product__card">
-                <img clas="card__img" src="assets/images/img1.jpg" alt="caneca star wars">
+                <img clas="card__img" src="assets/images/img17.jpg" alt="caneca star wars">
                 <h3 class="card__title">Nome do produto</h3>
                 <p class="card__price">R$ 60,00</p>
                 <a href="#" class="card__button">Ver produto</a>
             </article>
 
             <article class="product__card">
-                <img clas="card__img" src="assets/images/img1.jpg" alt="caneca star wars">
+                <img clas="card__img" src="assets/images/img18.jpg" alt="caneca star wars">
                 <h3 class="card__title">Nome do produto</h3>
                 <p class="card__price">R$ 60,00</p>
                 <a href="#" class="card__button">Ver produto</a>
@@ -196,12 +196,14 @@
     <footer class="footer">
         <div class="footer__aboutUs">
             <img class="footer__logo" src="assets/images/Logo.svg" alt="logo">
-            <p>Quem somos nós</p>
-            <p>Política de privacidade</p>
-            <p>Programa fidelidade</p>
-            <p>Nossas lojas</p>
-            <p>Quero ser franqueado</p>
-            <p>Anuncie aqui</p>
+            <div>
+                <p>Quem somos nós</p>
+                <p>Política de privacidade</p>
+                <p>Programa fidelidade</p>
+                <p>Nossas lojas</p>
+                <p>Quero ser franqueado</p>
+                <p>Anuncie aqui</p>
+            </div>
         </div>
         <!-- contact form -->
         <div class="footer__contact">
@@ -215,13 +217,13 @@
                     <label for="mensagem">Escreva sua mensagem</label>
                     <textarea name="" id="mensagem" cols="60" rows="10"></textarea>
                 </div>
-                <button class="contact__button" type="submit">Enviar mensagem</button>
+                <button class="contact__button"  type="submit">Enviar mensagem</button>
             </form>
         </div>
         <section class="footer__developer">
             <p>Desenvolvido por Gabriel Baldez</p>
             <p>2022</p>
         </section>
-    </footer>  
+    </footer>
 </body>
 </html>
