--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             </article>
 
             <article class="product__card">
-                <img clas="card__img" src="assets/images/img9.jpg" alt="caneca star wars">
+                <img clas="card__img" src="assets/images/im9.jpg" alt="caneca star wars">
                 <h3 class="card__title">Nome do produto</h3>
                 <p class="card__price">R$ 60,00</p>
                 <a href="#" class="card__button">Ver produto</a>
